--- a/css/style.css
+++ b/css/style.css
@@ -107,17 +107,33 @@ A:visited {
 	color:#696969;
 }
 
-pre {
-	white-space:pre-wrap;
-	white-space:-moz-pre-wrap;
-	white-space:-o-pre-wrap;
-	background:#faf8f0;
+code, samp, kbd {
+    font-family: "Courier New", Courier, monospace, sans-serif;
+    text-align: left;
+    color: #555;
 }
-
-
-code {
-    background:#faf8f0;
-
+pre code {
+    line-height: 1.6em;
+    font-size: 11px;
+}
+pre {
+    padding: 0.1em 0.5em 0.3em 0.7em;
+    border-left: 11px solid #ccc;
+    margin: 1.7em 0 1.7em 0.3em;
+    overflow: auto;
+    width: 93%;
+}
+/* target IE7 and IE6 */
+*:first-child+html pre {
+    padding-bottom: 2em;
+    overflow-y: hidden;
+    overflow: visible;
+    overflow-x: auto; 
+}
+* html pre { 
+    padding-bottom: 2em;
+    overflow: visible;
+    overflow-x: auto;
 }
 
 .exam {
