--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
-	font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 300;
 	margin-top: 20px;
         margin:0 auto;
         padding:2em;
